<resources>
    <string name="app_name">Qcarcare Tak</string>
    <string name="hint_username">Phone</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">เข้าสู่ระบบ</string>
    <string name="button_sign_up">สมัครสมาชิก</string>
    <string name="button_send">ส่ง</string>
    <string name="text_forgot_password">ลืมรหัสผ่านหรือไม่?</string>
    <string name="text_signin_message">Hello, sign in to your account</string>
    <string name="text_signin_social_media">Or Sign in using social media</string>
    <string name="text_signup_social_media">Or Sign up using social media</string>
    <string name="text_signin_signup">Don\'t have an account? <b>Sign up</b></string>
    <string name="text_signup_terms">By signing up, you agree to our <b>terms and conditions</b></string>
    <string name="text_signup_message">Hello, let\'s set up your account</string>

    <string name="text_forgot_password_title">Forgot password? No worries</string>
    <string name="text_forgot_password_message">We will send you a link to reset your password</string>

    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="name">ชื่อ</string>
    <string name="save">บันทึก</string>
    <string name="it">สาขาเทคโนโลยีสารสนเทศ</string>
    <string name="sic">วิทยาศาสตร์และเทคโนโลยีการเกษตร</string>
    <string name="rmutl">มหาวิทยาลัยเทคโนโลยีราชมงคลล้านนา ตาก</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
